crates/solidity-v2/testing/snapshots/diagnostics_output/structure/library_fallback_function/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 5982] Error: Libraries cannot have fallback functions.
   ╭─[input.sol:6:5]
   │
 6 │     fallback() external {}
   │     ───────────┬──────────  
   │                ╰──────────── Error occurred here.
───╯
